fix: overflow for table

--- a/src/less/page/page.less
+++ b/src/less/page/page.less
@@ -19,3 +19,7 @@ a {
   font: inherit;
   text-decoration: none;
 }
+
+.table {
+  overflow: scroll;
+}
